--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "firebase": "^9.21.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.7.4",
+    "react-image-crop": "^10.0.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.10",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
